<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen" >
    <RelativeLayout 
        android:id="@+id/lineartop"
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
         <Button
	        android:id="@+id/BTSave"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="Save" />
	    <Button
	        android:id="@+id/BTnewpatient"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/BTSave"
	        android:text="@string/create_new_patient" />
	     <RadioGroup
	        android:id="@+id/RGListOrdering"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/editText1"
	        android:layout_alignParentRight="true" >
	        
	        <RadioButton
	            android:id="@+id/RBAll"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:onClick="onRadioButtonClicked"
	            android:text="@string/list_all" />
	        <RadioButton
	            android:id="@+id/RBTime"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="onRadioButtonClicked"
	            android:text="@string/list_unseen_arrival_time" />
	        <RadioButton
	            android:id="@+id/RBUrgency"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="onRadioButtonClicked"
	            android:text="@string/list_unseen_urgency" />
	    </RadioGroup>
    </RelativeLayout >
    
    <RelativeLayout  
        android:layout_width = "wrap_content"
        android:layout_height= "wrap_content"
        android:layout_below="@+id/lineartop"
        android:orientation="vertical">
         <!-- Editext for Search -->
	    <EditText
	        android:id="@+id/inputSearch"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:hint="Search patients.."
	        android:inputType="textVisiblePassword" />
	    <!-- List View -->
	    <ListView
	        android:id="@+id/list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/inputSearch" />
    </RelativeLayout >
   
   
   
</RelativeLayout>